--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,4 @@
 @import './components/header.css';
 @import './components/footer.css';
 @import './components/buttons.css';
-@import './pages/index.css';
+@import './components/hero.css';
