--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -1,5 +1,5 @@
 /* Hero section */
-.hero {
+.home-hero {
   margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
@@ -8,15 +8,15 @@
   max-width: 1920px;
 }
 
-.hero-content {
+.home-hero-content {
   max-height: 600px;
 }
 
-.hero-image {
+.home-hero-image {
   max-height: 600px;
 }
 
-.hero-text {
+.home-hero-text {
   position: absolute;
   top: 50%;
   left: 30%;
@@ -24,16 +24,16 @@
   color: #fff;
 }
 
-.hero-text h1 {
+.home-hero-text h1 {
   font-size: clamp(36px, 5vw, 64px);
   line-height: 1.1;
   margin-bottom: 20px;
 }
-.hero-text h3 {
+.home-hero-text h3 {
   font-size: clamp(18px, 3vw, 24px);
   margin-bottom: 10px;
 }
-.hero-text p {
+.home-hero-text p {
   font-size: clamp(16px, 2vw, 18px);
   margin-bottom: 30px;
 }
@@ -213,7 +213,6 @@
 .project-item {
   position: relative;
   overflow: hidden;
-  border-radius: 5px;
 }
 
 .project-item img {
@@ -284,7 +283,7 @@
 /* Responsiveness section */
 
 @media (max-width: 767px) {
-  .hero-text {
+  .home-hero-text {
     left: 50%;
     text-align: center;
   }
@@ -356,10 +355,6 @@
     grid-column: 1;
     grid-row: auto;
     height: 300px;
-  }
-
-  .footer-grid {
-    grid-template-columns: 1fr;
   }
 }
 
